--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>{% block title %}{% endblock %} - Aplikasi Analisa Sentimen</title>
+		<title>{% block title %}{% endblock %} - Application Analisa-Sentimen</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		
@@ -44,8 +44,8 @@
 	</style>
 	<div class="container">
 		<div style="background:tomato !important; color:whitesmoke;" class='jumbotron text-center' >
-			<h1>Aplikasi Analisa Sentimen</h1>
-			<h3>Menggunakan VADER dan Support Vector Machine dengan SMOTE</h3>
+			<h1>Application Analisa-Sentimen</h1>
+			<h3>Using VADER and Support Vector Machine with SMOTE</h3>
 			</br>
 			<nav class="navbar navbar-nav navbar-light bg-light">
 				<div class='text-center'>
